--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
       <div class="sidebar">
         <div class="garage-image" style="background:linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.4)), url('images/garage.jpg');">
           <div class="garage-logo">
-            <img src="images/white_logo_red_circle.png" alt=""/>
+            <img src="images/wagon_logo.png" alt=""/>
           </div>
         </div>
         <div class="garage-info">
           <h3 class="text-center">Le Wagon</h3>
           <div class="garage-description">
             Our garage is the best.
-            Reasonable price, always on time, we are the awesome (and fictional).
+            Reasonable price, always on time, we are the awesome - and fictional - garage!
           </div>
           <div class="text-center">
             <form class="car-form" data-action="submit->garage#createCar">
